--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "watch:sass": "sass --watch ./src/sass:./dist/css",
     "compile:sass": "sass ./src/sass:./dist/css",
     "swatch:sass": "sass ./src/swatches:./dist/css",
-    "* DNU lint:css": "stylelint ./src/sass/",
-    "* DNU prefix:css": "postcss --replace dist/css/style.css --use autoprefixer --map",
+    "DNU lint:css": "stylelint ./src/sass/",
+    "DNU prefix:css": "postcss --replace dist/css/style.css --use autoprefixer --map",
     "bundle:js": "webpack --config-name bundle",
     "pack:js": "webpack --config-name pack",
     "blable:js": "webpack --config-name blable",
@@ -32,7 +32,7 @@
     "reset:html": "webpack --config-name reset_html",
     "reset:scss": "echo Reset scss",
     "reset:js": "echo Reset js",
-    "proj:build": "npm-run-all compile:sass blable:js",
+    "project:build": "npm-run-all compile:sass blable:js",
     "server:basic": "webpack-dev-server",
     "server:dev": "webpack-dev-server --config-name blable",
     "test:simple": "echo Test"
