--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "watch:sass": "sass --watch ./src/sass:./dist/css",
     "compile:sass": "sass ./src/sass:./dist/css",
     "swatch:sass": "sass ./src/swatches:./dist/css",
-    "DNU lint:css": "stylelint ./src/sass/",
-    "DNU prefix:css": "postcss --replace dist/css/style.css --use autoprefixer --map",
+    "lint:css": "stylelint ./src/sass/",
+    "prefix:css": "postcss --replace dist/css/style.css --use autoprefixer --map",
     "bundle:js": "webpack --config-name bundle",
     "pack:js": "webpack --config-name pack",
     "blable:js": "webpack --config-name blable",
