--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
-node_modules
 dist
 examples
-reset
-sass_notes.md
+node_modules
+admin
+
 src/fonts_bs5
 src/fonts_google
-src/icons_bs5
-src/svg
-src/swatches
 src/html
+src/icons_bs5
+src/js/vendors
+src/reset
+src/sass/vendors
+src/sass/sass_notes.md
+src/swatches
+src/svg
