--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,18 @@ examples
 node_modules
 admin
 
+src/img/bootstrap-icons.svg
+src/img/bootstrap-logo-white.svg
 src/fonts_bs5
 src/fonts_google
 src/html
 src/icons_bs5
+src/icons_feather
+src/js/helpers
 src/js/vendors
 src/reset
 src/sass/vendors
+src/sass/helpers
 src/sass/sass_notes.md
 src/swatches
 src/svg
