--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bootstrap5_builder",
   "version": "1.1.0",
   "private": true,
-  "description": "Templating and Theming site used to create custom sites, based on bootstrap5",
+  "description": "Templating and Theming site used to create custom sites, based on Bootstrap5",
   "author": "Dan McDonald",
   "license": "MIT",
   "main": "./src/js/main.js",
@@ -23,36 +23,34 @@
     "workflow"
   ],
   "scripts": {
-    "bundle:js": "webpack --config-name bundle",
-    "pack:js": "webpack --config-name pack",
-    "blable:js": "webpack --config-name blable",
-
-    "copy:html": "copyfiles -f -s ./src/html/*.html ./dist",
-    "copy:fonts:all": "copyfiles -f -s ./src/html/*.html ./dist",
-    "copy:fonts:bs5": "copyfiles -f -s ./src/html/*.html ./dist",
-    "copy:fonts:google": "copyfiles -s ./src/fonts_google/*.tff ./dist/fonts",
-
+    "js:bundle": "webpack --config-name bundle",
+    "js:pack": "webpack --config-name pack",
+    "js:blable": "webpack --config-name blable",
+    "copy:bs5:jsbundles": "copyfiles -s -u 4 ./node_modules/bootstrap/dist/js/bootstrap.bundle.* ./dist/js",
+    "copy:bs5:helpers": "copyfiles -s -u 3 ./src/js/helpers/c* ./dist/js",
+    "copy:html:helpers": "copyfiles -s -u 3 ./src/html/helpers/*.html ./dist",
+    "copy:fonts:all": "npm-run-all copy:fonts:bs5 copy:fonts:google",
+    "copy:bs5:fonts": "copyfiles -s -u 2 ./src/fonts_bs5/* ./dist/fonts",
+    "copy:fonts:google": "copyfiles -s -u 2 ./src/fonts_google/*.ttf ./dist/fonts",
+    "copy:bs5:icons": "copyfiles -s -u 2 ./src/img/bootstrap-logo-white.svg ./dist/img",
     "project:build": "npm-run-all compile:sass blable:js",
     "server:basic": "webpack-dev-server",
-
-    "prefix:css": "postcss --replace dist/css/style.css --use autoprefixer --map",
-    "lint:css": "stylelint ./src/sass/",
-
+    "css:prefix": "postcss --replace dist/css/style.css --use autoprefixer --map",
+    "css:lint": "stylelint ./src/sass/",
     "sass:dev:all": "sass ./src/sass:./dist/css",
     "sass:dev:watch": "sass --watch ./src/sass:./dist/css",
     "sass:dev:style": "sass ./src/sass/style.scss:./dist/css/style.css",
     "sass:bs5:all": "npm-run-all sass:bs5:min sass:bs5:cs sass:bs5:icons",
     "sass:bs5:min": "sass --style=compressed ./node_modules/bootstrap/scss/bootstrap.scss:./dist/css/bootstrap.min.css",
     "sass:bs5:reg": "sass ./node_modules/bootstrap/scss/bootstrap.scss:./dist/css/bootstrap.css",
-    "sass:bs5:cs": "sass ./src/sass/vendors/cheatsheet.scss:./dist/css/cheatsheet.css",
+    "sass:bs5:cs": "sass ./src/sass/helpers/cheatsheet.scss:./dist/css/cheatsheet.css",
     "sass:bs5:icons": "sass ./node_modules/bootstrap-icons/font/bootstrap-icons.scss:./dist/css/bootstrap-icons.css",
     "sass:swatch:all": "sass ./src/swatches:./dist/css",
     "sass:swatch:darkly": "sass ./src/swatches/darkly_swatch.scss:./dist/css/darkly_swatch.css",
     "test:simple": "node ./src/js/test.js"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.7.2"
+    "bootstrap": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
