--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap5_builder",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "description": "Templating and Theming site used to create custom sites, based on Bootstrap5",
   "author": "Dan McDonald",
@@ -35,6 +35,7 @@
     "project:build": "npm-run-all sass:dev:all js:blable",
     "project:server": "webpack-dev-server",
     "server:basic":"node ./basic_server.js",
+    "server:lamp":"bash ./lamp_server.sh",
     "project:reset": "//TODO: npm-run-all sass:dev:all js:blable",
     "css:prefix": "//TODO: postcss --replace dist/css/style.css --use autoprefixer --map",
     "css:lint": " //TODO: stylelint ./src/sass/",
