--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "copy:html:html": "copyfiles -s -u 3 ./src/html/html/*.html ./dist/html",
     "project:build": "npm-run-all sass:dev:all js:blable",
     "project:server": "webpack-dev-server",
-    "server:basic":"node ./basic_server.js",
-    "server:lamp":"bash ./lamp_server.sh",
+    "server:basic": "node ./basic_server.js",
+    "server:lamp": "bash ./lamp_server.sh",
     "project:reset": "//TODO: npm-run-all sass:dev:all js:blable",
     "css:prefix": "//TODO: postcss --replace dist/css/style.css --use autoprefixer --map",
     "css:lint": " //TODO: stylelint ./src/sass/",
@@ -47,10 +47,11 @@
     "sass:dev:all": "sass ./src/sass:./dist/css",
     "sass:dev:watch": "sass --watch ./src/sass:./dist/css",
     "sass:dev:style": "sass ./src/sass/style.scss:./dist/css/style.css",
-    "sass:dev:animate": "sass ./src/scss/my_animate.scss:./dist/css/my_animate.css",
+    "sass:dev:animate": "sass ./src/scss/_my_animate.scss:./dist/css/my_animate.css",
     "sass:bs5:all": "npm-run-all sass:bs5:min sass:bs5:cs sass:bs5:icons",
     "sass:bs5:min": "sass --style=compressed ./node_modules/bootstrap/scss/bootstrap.scss:./dist/css/bootstrap.min.css",
     "sass:bs5:reg": "sass ./src/bs5_core/scss/bootstrap.scss:./dist/css/bootstrap.css",
+    "sass:bs5:grid": "sass ./src/scss/bs5_grid_custom.scss:./dist/css/bootstrap.grid.css",
     "sass:bs5:cs": "sass ./src/bs5_examples/cheatsheet/cheatsheet.css:./dist/css/cheatsheet.css",
     "sass:bs5:icons": "sass ./src/bs5_icons/bootstrap-icons.scss:./dist/css/bootstrap-icons.css",
     "sass:swatch:all": "sass ./src/bs5_swatch:./dist/css",
@@ -77,7 +78,6 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.7.2",
-    "d3": "^7.3.0"
+    "bootstrap-icons": "^1.7.2"
   }
 }
