--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap5_builder",
-  "version": "1.2.0",
+  "version": "1.2.5",
   "private": true,
   "description": "Templating and Theming site used to create custom sites, based on Bootstrap5",
   "author": "Dan McDonald",
@@ -32,15 +32,17 @@
     "copy:html:bs5": "copyfiles -s -u 3 ./src/html/bs5/*.html ./dist",
     "copy:html:my": "copyfiles -s -u 2 ./src/html/*.html ./dist",
     "copy:html:html": "copyfiles -s -u 3 ./src/html/html/*.html ./dist/html",
-    "project:build": "npm-run-all sass:dev:all js:blable",
+    "//FIXME:project:build": "npm-run-all sass:dev:all js:blable",
+    "//FIXME:project:reset": "npm-run-all sass:dev:all js:blable",
     "server:webpack": "webpack-dev-server",
     "server:node": "node ./server_node.js",
     "server:lamp": "bash ./server_lamp.sh",
     "server:express": "node ./server_express.js",
-    "project:reset": "//TODO: npm-run-all sass:dev:all js:blable",
-    "css:prefix": "//TODO: postcss --replace dist/css/style.css --use autoprefixer --map",
-    "css:lint": " //TODO: stylelint ./src/sass/",
-    "css:purge": "//TODO: echo to do",
+    "prefix:css": "postcss --replace dist/css/style.css --map",
+    "lint:css": "stylelint ./src/sass/*.css",
+    "lint:scss": "stylelint ./src/sass/*.scss --custom-syntax postcss-scss",
+    "//FIXME:purge:css:config": "purgecss --config ./purgecss.config.js",
+    "purge:css": "purgecss --css ./dist/css/style.css --content ./dist/index.html --output ./dist/css/style.min.css",
     "copy:fonts:all": "npm-run-all copy:fonts:bs5 copy:fonts:google",
     "copy:fonts:bs5": "copyfiles -s -u 3 ./src/bs5_icons/fonts/* ./dist/fonts",
     "copy:fonts:google": "copyfiles -s -u 2 ./src/fonts_google/*.ttf ./dist/fonts",
@@ -62,17 +64,21 @@
   "devDependencies": {
     "@babel/core": "^7.16.10",
     "@babel/preset-env": "^7.16.11",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^10.2.1",
     "copyfiles": "^2.4.1",
+    "glob-all": "^3.2.1",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
+    "postcss-scss": "^4.0.3",
+    "purgecss-webpack-plugin": "^4.1.3",
     "sass": "^1.49.0",
     "stylelint": "^14.2.0",
-    "stylelint-config-twbs-bootstrap": "^3.0.1",
+    "stylelint-config-standard": "^24.0.0",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
