--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "feather-icons": "^4.28.0"
   }
 }
