--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "copy:html:bs5": "copyfiles -s -u 3 ./src/html/bs5/*.html ./dist",
     "copy:html:my": "copyfiles -s -u 2 ./src/html/*.html ./dist",
     "copy:html:html": "copyfiles -s -u 3 ./src/html/html/*.html ./dist/html",
-    "//FIXME:project:build": "npm-run-all sass:dev:all js:blable",
-    "//FIXME:project:reset": "npm-run-all sass:dev:all js:blable",
+    "project:build": "npm-run-all sass:dev:all js:blable",
+    "project:reset": "npm-run-all sass:dev:all js:blable",
     "server:webpack": "webpack-dev-server",
     "server:node": "node ./server_node.js",
     "server:lamp": "bash ./server_lamp.sh",
@@ -41,7 +41,7 @@
     "prefix:css": "postcss --replace dist/css/style.css --map",
     "lint:css": "stylelint ./src/sass/*.css",
     "lint:scss": "stylelint ./src/sass/*.scss --custom-syntax postcss-scss",
-    "//FIXME:purge:css:config": "purgecss --config ./purgecss.config.js",
+    "purge:css:config": "purgecss --config ./purgecss.config.js",
     "purge:css": "purgecss --css ./dist/css/style.css --content ./dist/index.html --output ./dist/css/style.min.css",
     "copy:fonts:all": "npm-run-all copy:fonts:bs5 copy:fonts:google",
     "copy:fonts:bs5": "copyfiles -s -u 3 ./src/bs5_icons/fonts/* ./dist/fonts",
@@ -86,7 +86,6 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
-    "express": "^4.17.2",
-    "feather-icons": "^4.28.0"
+    "express": "^4.17.2"
   }
 }
