--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "@tabler/icons": "^1.53.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "express": "^4.17.2"
