--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ src/bs5_*
 src/fonts_google
 src/html
 src/icons_feather
-src/icons_tabler/*
-src/icons_tabler/icons
+src/icons_bs5
+src/icons_tabler
 src/js/helpers
 src/js/vendors
 src/scss
