--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bootstrap5_builder",
+  "name": "web_dev_builder",
   "version": "1.2.5",
   "private": true,
-  "description": "Templating and Theming site used to create custom sites, based on Bootstrap5",
+  "description": "Templating and Theming site used to create custom sites",
   "author": "Dan McDonald",
   "license": "MIT",
   "main": "./src/js/main.js",
@@ -12,71 +12,48 @@
   },
   "homepage": "https://github.com/mcdonaldd1/bootstrap5_builder#readme",
   "keywords": [
-    "Bootstrap5",
-    "Bootstrap icons",
-    "npm",
-    "webpack",
-    "sass",
-    "scss",
-    "babel",
-    "web project",
-    "workflow"
+    "key",
+    "words"
   ],
   "scripts": {
-    "js:bundle": "webpack --config-name bundle",
-    "js:pack": "webpack --config-name pack",
-    "js:blable": "webpack --config-name blable",
-    "js:copy:bundles": "copyfiles -s -u 4 ./src/bs5_core/dist/js/bootstrap.bundle.* ./dist/js",
-    "js:copy:helpers": "copyfiles -s -u 3 ./src/js/helpers/c* ./dist/js",
-    "copy:html:all": "npm-run-all copy:html:bs5 copy:html:my copy:html:html",
-    "copy:html:bs5": "copyfiles -s -u 3 ./src/html/bs5/*.html ./dist",
-    "copy:html:my": "copyfiles -s -u 2 ./src/html/*.html ./dist",
-    "copy:html:html": "copyfiles -s -u 3 ./src/html/html/*.html ./dist/html",
-    "project:build": "npm-run-all sass:dev:all js:blable",
-    "project:reset": "npm-run-all sass:dev:all js:blable",
-    "server:webpack": "webpack-dev-server",
+    "build:prod": "webpack",
+    "build:dev": "webpack --mode development",
+    "server:dev": "webpack-dev-server --mode development --config-name bundle",
     "server:node": "node ./server_node.js",
     "server:lamp": "bash ./server_lamp.sh",
     "server:express": "node ./server_express.js",
+    "sass:dev": "sass ./src/sass:./src/css",
+    "sass:dev:watch": "sass --watch ./src/sass:./src/css",
+    "copy:html:html": "copyfiles -s -u 3 ./src/html/html/*.html ./dist/html",
+    "copy:fonts:all": "npm-run-all copy:fonts:bs5 copy:fonts:google",
+    "copy:fonts:bs5": "copyfiles -s -u 3 ./src/bs5_icons/fonts/* ./dist/fonts",
+    "copy:fonts:google": "copyfiles -s -u 2 ./src/fonts_google/*.ttf ./dist/fonts",
     "prefix:css": "postcss --replace dist/css/style.css --map",
     "lint:css": "stylelint ./src/sass/*.css",
     "lint:scss": "stylelint ./src/sass/*.scss --custom-syntax postcss-scss",
     "purge:css:config": "purgecss --config ./purgecss.config.js",
-    "purge:css": "purgecss --css ./dist/css/style.css --content ./dist/index.html --output ./dist/css/style.min.css",
-    "copy:fonts:all": "npm-run-all copy:fonts:bs5 copy:fonts:google",
-    "copy:fonts:bs5": "copyfiles -s -u 3 ./src/bs5_icons/fonts/* ./dist/fonts",
-    "copy:fonts:google": "copyfiles -s -u 2 ./src/fonts_google/*.ttf ./dist/fonts",
-    "copy:logos:bs5": "copyfiles -s -u 3 ./src/bs5_core/brand/* ./dist/img",
-    "sass:dev:all": "sass ./src/sass:./dist/css",
-    "sass:dev:watch": "sass --watch ./src/sass:./dist/css",
-    "sass:dev:style": "sass ./src/sass/style.scss:./dist/css/style.css",
-    "sass:dev:animate": "sass ./src/scss/vendors/_animate.scss:./dist/css/animate.css",
-    "sass:bs5:all": "npm-run-all sass:bs5:min sass:bs5:cs sass:bs5:icons",
-    "sass:bs5:min": "sass --style=compressed ./node_modules/bootstrap/scss/bootstrap.scss:./dist/css/bootstrap.min.css",
-    "sass:bs5:reg": "sass ./src/bs5_core/scss/bootstrap.scss:./dist/css/bootstrap.css",
-    "sass:bs5:grid": "sass ./src/scss/bs5_grid_custom.scss:./dist/css/bootstrap.grid.css",
-    "sass:bs5:cs": "sass ./src/bs5_examples/cheatsheet/cheatsheet.css:./dist/css/cheatsheet.css",
-    "sass:bs5:icons": "sass ./src/bs5_icons/bootstrap-icons.scss:./dist/css/bootstrap-icons.css",
-    "sass:swatch:all": "sass ./src/bs5_swatch:./dist/css",
-    "sass:swatch:darkly": "sass ./src/bs5_swatch/darkly_swatch.scss:./dist/css/darkly_swatch.css",
-    "test:1": "node ./src/js/test.js"
+    "purge:css": "purgecss --css ./dist/css/style.css --content ./dist/index.html --output ./dist/css/style.min.css"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
     "@babel/preset-env": "^7.16.11",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
+    "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^10.2.1",
     "copyfiles": "^2.4.1",
+    "css-loader": "^6.6.0",
     "glob-all": "^3.2.1",
+    "html-webpack-plugin": "^5.5.0",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
     "postcss-scss": "^4.0.3",
-    "@fullhuman/postcss-purgecss": "^4.1.3",
     "purgecss-webpack-plugin": "^4.1.3",
-    "autoprefixer": "^10.4.2",
     "sass": "^1.49.0",
+    "style-loader": "^3.3.1",
     "stylelint": "^14.2.0",
     "stylelint-config-standard": "^24.0.0",
     "webpack": "^5.66.0",
@@ -84,8 +61,6 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.7.2",
     "express": "^4.17.2"
   }
 }
