--- a/package.json
+++ b/package.json
@@ -18,21 +18,19 @@
   "scripts": {
     "build:prod": "webpack",
     "build:dev": "webpack --mode development",
+    "build:css": "npm-run-all sass:style purge:css",
+    "build:proj": "npm-run-all sass:style build:dev",
     "server:dev": "webpack-dev-server --mode development --config-name bundle",
     "server:node": "node ./server_node.js",
     "server:lamp": "bash ./server_lamp.sh",
     "server:express": "node ./server_express.js",
-    "sass:dev": "sass ./src/sass:./src/css",
-    "sass:dev:watch": "sass --watch ./src/sass:./src/css",
     "copy:html:html": "copyfiles -s -u 3 ./src/html/html/*.html ./dist/html",
-    "copy:fonts:all": "npm-run-all copy:fonts:bs5 copy:fonts:google",
-    "copy:fonts:bs5": "copyfiles -s -u 3 ./src/bs5_icons/fonts/* ./dist/fonts",
-    "copy:fonts:google": "copyfiles -s -u 2 ./src/fonts_google/*.ttf ./dist/fonts",
-    "prefix:css": "postcss --replace dist/css/style.css --map",
-    "lint:css": "stylelint ./src/sass/*.css",
     "lint:scss": "stylelint ./src/sass/*.scss --custom-syntax postcss-scss",
-    "purge:css:config": "purgecss --config ./purgecss.config.js",
-    "purge:css": "purgecss --css ./dist/css/style.css --content ./dist/index.html --output ./dist/css/style.min.css"
+    "sass:dev": "sass ./src/sass:./src/css",
+    "sass:style": "sass ./src/sass/style_custom.scss:./src/css/style.css",
+    "sass:dev:watch": "sass --watch ./src/sass:./src/css",
+    "purge:css": "purgecss --config ./purgecss.config.js",
+    "prefix:css": "postcss --replace ./src/css/style_custom.css --map"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
@@ -43,6 +41,7 @@
     "copy-webpack-plugin": "^10.2.1",
     "copyfiles": "^2.4.1",
     "css-loader": "^6.6.0",
+    "file-loader": "^6.2.0",
     "glob-all": "^3.2.1",
     "html-webpack-plugin": "^5.5.0",
     "lodash": "^4.17.21",
@@ -50,6 +49,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
+    "postcss-loader": "^6.2.1",
     "postcss-scss": "^4.0.3",
     "purgecss-webpack-plugin": "^4.1.3",
     "sass": "^1.49.0",
@@ -61,6 +61,8 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.0",
     "express": "^4.17.2"
   }
 }
